@@ -1,3 +1,7 @@
+Wed Apr 22 09:42:35 MET DST 1998 hannes
+  * several changes concerning stdfac
+    (kstdfac.cc, kutil.cc kutil.h)
+
 Tue Apr 21 15:19:10 MET DST 1998 hannes/jens
   * gdc in Q(a) returns "not implemented" (clapsing.cc)
 
